[package]
name = "stuff"
version = "0.1.3"
edition = "2021"
description = "Stuffing things into pointers."
readme = "./README.md"
homepage = "https://github.com/Nilstrieb/stuff"
repository = "https://github.com/Nilstrieb/stuff"
license = "MIT"
keywords = ["unsafe", "pointer", "bitpacking", "provenance", "tagging"]
categories = ["data-structures", "memory-management", "no-std"]
include = ["Cargo.toml", "LICENSE", "src", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sptr = "0.2.3"

[dev-dependencies]
paste = "1.0.7"
