[package]
name = "stuff"
version = "0.3.0-beta.0"
edition = "2018"
description = "Stuffing things into pointers."
readme = "./README.md"
homepage = "https://github.com/Nilstrieb/stuff"
repository = "https://github.com/Nilstrieb/stuff"
documentation = "https://docs.rs/stuff"
license = "MIT"
keywords = ["unsafe", "pointer", "bitpacking", "provenance"]
categories = ["data-structures", "memory-management", "no-std"]
include = ["Cargo.toml", "LICENSE", "src", "README.md"]
rust-version = "1.34.2"

[dependencies]
sptr = "0.3.1"

[dev-dependencies]
paste = "1.0.7"
